[gd_scene load_steps=3 format=3 uid="uid://ckrrpdn8rkl17"]

[ext_resource type="Script" path="res://games/my_game/main.gd" id="1_aue0y"]
[ext_resource type="PackedScene" uid="uid://c87cowtynwm55" path="res://chimerin/chimerin.tscn" id="2_e27ex"]

[node name="MyGame" type="Node2D"]
script = ExtResource("1_aue0y")
player_scene = ExtResource("2_e27ex")

[node name="Players" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Spawns" type="Node2D" parent="."]

[node name="Player1" type="Marker2D" parent="Spawns"]
position = Vector2(560, 540)

[node name="Player2" type="Marker2D" parent="Spawns"]
position = Vector2(1360, 540)

[node name="Player3" type="Marker2D" parent="Spawns"]
position = Vector2(960, 140)

[node name="Player4" type="Marker2D" parent="Spawns"]
position = Vector2(960, 940)

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 0.9
autostart = true

[node name="GameTimer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 128.0
grow_vertical = 2
mouse_filter = 2

[node name="ScoreContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
